--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Index</title>
 </head>
 <body>
+    <a href="ListenToThePeople.m4a">Click here to listen to song</a><br />
     Listen to the People<br /><br />
     Listen to the people that we hold high.<br />
     How many times are they going to lie?<br />
