--- a/index.html
+++ b/index.html
@@ -2,20 +2,26 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Index</title>
+    <style type="text/css">
+        .red{color:red;}
+        .abc{font-size:20px; font-style:italic;}
+        
+
+    </style>
 </head>
 <body>
-    <a href="ListenToThePeople.m4a">Click here to listen to song</a><br />
-    Listen to the People<br /><br />
+    <a class="red" href="ListenToThePeople.m4a">Click here to listen to song</a><br /><br />
+    <span class="abc"> Listen to the People</span><br /><br />
     Listen to the people that we hold high.<br />
     How many times are they going to lie?<br />
     Sooner or later they'll make you cry.<br />
     How many children are going to die?<br />
-    We the people, we just sigh!<br /><br />
+    <span class="red">We the people,</span> we just sigh!<br /><br />
     The voice in your head said, "I told you so".<br />
     When it was their turn, they just said, "NO".<br />
     Voter morale is at a historic low.<br />
     Political decisions taking their toll.<br />
-    Look in their eyes, Do they really know?<br /><br />
+    Look in their eyes, Do thy really know?<br /><br />
     We hear the gun shots.<br />
     We feel the pain.<br />
     We watch the blood flow.<br />
