--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Index</title>
-    <style type="text/css">
-        .red{color:red;}
-        .abc{font-size:20px; font-style:italic;}
-        
-
-    </style>
+    <link href="StyleSheet.css" rel="stylesheet" />
 </head>
 <body>
     <a class="red" href="ListenToThePeople.m4a">Click here to listen to song</a><br /><br />
