--- a/index.html
+++ b/index.html
@@ -5,33 +5,38 @@
     <link href="StyleSheet.css" rel="stylesheet" />
 </head>
 <body>
-    <a class="red" href="ListenToThePeople.m4a">Click here to listen to song</a><br /><br />
-    <span class="abc"> Listen to the People</span><br /><br />
-    Listen to the people that we hold high.<br />
-    How many times are they going to lie?<br />
-    Sooner or later they'll make you cry.<br />
-    How many children are going to die?<br />
-    <span class="red">We the people,</span> we just sigh!<br /><br />
-    The voice in your head said, "I told you so".<br />
-    When it was their turn, they just said, "NO".<br />
-    Voter morale is at a historic low.<br />
-    Political decisions taking their toll.<br />
-    Look in their eyes, Do thy really know?<br /><br />
-    We hear the gun shots.<br />
-    We feel the pain.<br />
-    We watch the blood flow.<br />
-    IT IS SO INSANE!<br /><br />
-    They keep telling us that they're not to blame.<br />
-    But they act like it's some kind of game.<br />
-    With each new day, it all stays the same,<br />
-    Except for the victims, the change is their name.<br />
-    And I wonder, can they feel shame?<br /><br />
-    We hear the gun shots.<br />
-    We feel the pain.<br />
-    We watch the blood flow.<br />
-    IT IS SO INSANE!<br /><br /><br />
-    (c) 2018 <br />
-    Ronald L. Marks<br />
-    All Rights Reserved<br />
+        <span class="tab">
+        <a class="red" href="ListenToThePeople.m4a">Click to listen</a><br /><br />
+                <span class="abc"> Listen to the People</span><br /><br />
+                <span class="b1">
+                        Listen to the people that we hold high.<br />
+                        How many times are they going to lie?<br />
+                        Sooner or later they'll make you cry.<br />
+                        How many children are going to die?<br />
+                        We the people, we just sigh!<br /><br />
+                        The voice in your head said, "I told you so".<br />
+                        When it was their turn, they just said, "NO".<br />
+                        Voter morale is at a historic low.<br />
+                        Political decisions taking their toll.<br />
+                        Look in their eyes, Do they really know?<br /><br />
+                        We hear the gun shots.<br />
+                        We feel the pain.<br />
+                        We watch the blood flow.<br />
+                        It IS SO INSANE!<br /><br />
+                        They keep telling us that they're not to blame.<br />
+                        But they act like it's some kind of game.<br />
+                        With each new day, it all stays the same,<br />
+                        Except for the victims, the change is their name.<br />
+                        And I wonder, can they feel shame?<br /><br />
+                        We hear the gun shots.<br />
+                        We feel the pain.<br />
+                        We watch the blood flow.<br />
+                        IT IS SO INSANE!
+                    </span><br /><br />
+                <span class="cr">
+                    (c) 2018 Ronald L. Marks<br />
+                    All Rights Reserved
+                </span><br />
+            </span>
 </body>
 </html>
